
* LUCENE-10070 Skip deleted docs when accumulating facet counts for all docs. (Ankur Goel, Greg Miller)

* LUCENE-10134: ConcurrentSortedSetDocValuesFacetCounts shouldn't share liveDocs Bits across threads.
  (Ankur Goel)

* LUCENE-10008: Respect ignoreCase in CommonGramsFilterFactory (Vigya Sharma)

* LUCENE-10154: NumericLeafComparator to define getPointValues. (Mayya Sharipova, Adrien Grand)

Build
---------------------

* LUCENE-10104, SOLR-15631: Upgrade forbiddenapis to version 3.2.  (Uwe Schindler)

Other
---------------------

* LUCENE-10098: Add docs/links to GermanAnalyzer describing how to decompound nouns. (Robert Muir)

======================= Lucene 8.10.1 =======================

Bug Fixes
---------------------

* LUCENE-10110: MultiCollector now handles single leaf collector that wants to skip low-scoring hits
 but the combined score mode doesn't allow it. (Jim Ferenczi)

* LUCENE-10119: Sort optimization with search_after can wrongly skip documents
  whose values are equal to the last value of the previous page (Nhat Nguyen)

* LUCENE-10126: Sort optimization with a chunked bulk scorer
  can wrongly skip documents (Nhat Nguyen, Mayya Sharipova)

======================= Lucene 8.10.0 =======================

API Changes
---------------------

* LUCENE-9962: DrillSideways allows sub-classes to provide "drill down" FacetsCollectors. They
  may provide a null collector if they choose to bypass "drill down" facet collection. (Greg Miller)

* LUCENE-9902: Change the getValue method from IntTaxonomyFacets to be protected instead of private.
  Users can now access the count of an ordinal directly without constructing an extra FacetLabel.
  Also use variable length arguments for the getOrdinal call in TaxonomyReader. (Gautam Worah)

* LUCENE-10036: Replaced the ScoreCachingWrappingScorer ctor with a static factory method that
  ensures unnecessary wrapping doesn't occur. (Greg Miller)
